fixed image overlap issue

--- a/index.css
+++ b/index.css
@@ -171,6 +171,7 @@ img{
 .col-3{
     background-color: #657b83;
     border-radius: 10px;
+    overflow: hidden;
 }
 .col-3:hover{
     background-color: #f58b5f;
